force-app/main/default/objects/Idea__c/Idea__c.object-meta.xml
<CustomObject>
    <description>Captures improvement ideas for customer or employee experience, with workflow, visibility, and resolution details.</description>
    <label>Idea</label>
    <nameField>
        <displayFormat>IDEA-{00000}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>