force-app/main/default/objects/Idea__c/fields/Administrator__c.field-meta.xml
<CustomField>
    <fullName>Administrator__c</fullName>
    <description>Administrator or reviewer responsible for this idea.</description>
    <label>Administrator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Administered Ideas</relationshipLabel>
    <relationshipName>Administered_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>