force-app/main/default/objects/Idea__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>Date the idea was closed (Implemented, Not Pursued, or Acknowledged).</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>