force-app/main/default/objects/Idea__c/fields/Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Impact__c</fullName>
    <description>Summary of expected customer or employee impact.</description>
    <label>Customer / Employee Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>