force-app/main/default/objects/Idea__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the idea, including problem, impact, and suggested improvement.</description>
    <label>Description</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>