force-app/main/default/objects/Idea__c/fields/Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Feasibility__c</fullName>
    <description>Assessment of feasibility (Low, Medium, High).</description>
    <label>Feasibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>