force-app/main/default/objects/Idea__c/fields/Improvement_Type__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Type__c</fullName>
    <description>Type of improvement this idea represents.</description>
    <label>Improvement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>