force-app/main/default/objects/Idea__c/fields/Is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Is_Confidential__c</fullName>
    <description>Marks whether the idea is confidential and should be restricted to creator and admins.</description>
    <label>Is Confidential</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>