force-app/main/default/objects/Idea__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Idea owner (defaults to creator).</description>
    <label>Idea Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Owned Ideas</relationshipLabel>
    <relationshipName>Owned_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>