force-app/main/default/objects/Idea__c/fields/Repeat_Signals__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Signals__c</fullName>
    <description>Number of times this issue or suggestion has been raised.</description>
    <label>Repeat Signals</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>