force-app/main/default/objects/Idea__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <description>Rationale and explanation for the decision and outcome.</description>
    <label>Resolution Notes</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>