force-app/main/default/objects/Idea__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current status in the idea review and implementation workflow.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Implemented</fullName>
            </value>
            <value>
                <fullName>Not Pursued</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>