force-app/main/default/objects/Idea__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>Free-form tags or keywords; separate with semicolons.</description>
    <label>Tags</label>
    <length>255</length>
    <type>Text</type>
</CustomField>