force-app/main/default/objects/Idea__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Controls who can see the idea (Private, Creator Selected, Open).</description>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Creator Selected</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>