force-app/main/default/objects/Idea__c/validationRules/Acknowledged_From_Under_Review_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Acknowledged_From_Under_Review_Only</fullName>
    <active>true</active>
    <description>Acknowledged status is only allowed from Under Review.</description>
    <errorConditionFormula>
        ISPICKVAL(Status__c, "Acknowledged")
        &amp;&amp;
        NOT(ISPICKVAL(PRIORVALUE(Status__c), "Under Review"))
    </errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Acknowledged is only allowed when moving from Under Review.</errorMessage>
</ValidationRule>