force-app/main/default/objects/Idea__c/validationRules/Resolution_Notes_Required_On_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Notes_Required_On_Close</fullName>
    <active>true</active>
    <description>Require resolution notes when status is Implemented or Not Pursued.</description>
    <errorConditionFormula>
        OR(
            ISPICKVAL(Status__c, "Implemented"),
            ISPICKVAL(Status__c, "Not Pursued")
        )
        &amp;&amp;
        ISBLANK(Resolution_Notes__c)
    </errorConditionFormula>
    <errorDisplayField>Resolution_Notes__c</errorDisplayField>
    <errorMessage>Resolution notes are required when closing an idea as Implemented or Not Pursued.</errorMessage>
</ValidationRule>